--- a/public/css/team-member-public.css
+++ b/public/css/team-member-public.css
@@ -1,4 +1,36 @@
-/**
- * All of the CSS for your public-facing functionality should be
- * included in this file.
- */
+.team-members-grid {
+    display: grid;
+    grid-gap: 20px;
+}
+
+.team-member {
+    text-align: center;
+}
+.team-member-image{
+    width: 100%;
+}
+
+.team-member-details a{
+    font-size: 24px;
+    text-decoration: none;
+}
+
+.team-member-details p{
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+.archive-btn{
+    text-align: center;
+    margin-top: 20px;
+}
+
+.archive-btn .see-all{
+    display: inline-block;
+    padding: 10px 35px;
+    border-radius: 5px;
+    background: #0a53be;
+    color: #ffffff;
+    text-decoration: none;
+
+}
